--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "swiper": "^11.1.1"
